# vxl

contrib/brl/bbas/bnabo/: bnabo.h  bnabo_index_heap.h
contrib/brl/bbas/bvgl/: CMakeLists.txt  bvgl_gen_cylinder.cxx  bvgl_gen_cylinder.h  bvgl_grid_index_3d.cxx  bvgl_grid_index_3d.h  bvgl_k_nearest_neighbors_3d.h  bvgl_knn_index_3d.h  bvgl_poly_region_3d.h  bvgl_poly_region_3d.txx  bvgl_scaled_shape_3d.h  bvgl_scaled_shape_3d.txx  bvgl_spline_region_3d.h  bvgl_spline_region_3d.hxx  bvgl_spline_region_3d.txx
contrib/brl/bbas/bvgl/Templates/: bvgl_poly_region_3d+double-.cxx  bvgl_scaled_shape+double-.cxx  bvgl_spline_region_3d+double-.cxx  vbl_array_3d+vcl_vector+double--.cxx
contrib/brl/bbas/bvgl/nabo/: CMakeLists.txt  bvgl_nabo.cxx  bvgl_nabo.h  bvgl_nabo_brute_force.cxx  bvgl_nabo_index_heap.h  bvgl_nabo_kdd_tree.cxx  bvgl_nabo_private.h
contrib/brl/bbas/bvgl/tests/: CMakeLists.txt  test_driver.cxx  test_grid_index_3d.cxx  test_k_nearest_neighbors.cxx  test_knn_index_3d.cxx  test_poly_region.cxx  test_scaled_shape.cxx  test_spline_region.cxx
contrib/brl/bbas/volm/: volm_io.cxx  volm_io.h
contrib/brl/bbas/volm/pro/processes/: volm_create_satellite_site_process.cxx
contrib/brl/bseg/boxm2/: boxm2_block.cxx  boxm2_scene.cxx  boxm2_scene.h
contrib/brl/bseg/boxm2/cpp/algo/: boxm2_refine_block_multi_data.cxx  boxm2_surface_distance_refine.hxx  boxm2_surface_distance_refine.txx
contrib/brl/bseg/boxm2/tests/: test_scene.cxx
contrib/brl/bseg/boxm2/vecf/: CMakeLists.txt  boxm2_vecf_articulated_scene.cxx  boxm2_vecf_articulated_scene.h  boxm2_vecf_composite_face_articulation.cxx  boxm2_vecf_composite_face_articulation.h  boxm2_vecf_composite_face_params.cxx  boxm2_vecf_composite_face_params.h  boxm2_vecf_composite_face_scene.cxx  boxm2_vecf_composite_face_scene.h  boxm2_vecf_cranium.cxx  boxm2_vecf_cranium.h  boxm2_vecf_cranium_scene.cxx  boxm2_vecf_cranium_scene.h  boxm2_vecf_estimate_camera_from_canthus.cxx  boxm2_vecf_estimate_camera_from_canthus.h  boxm2_vecf_eyelid.cxx  boxm2_vecf_eyelid.h  boxm2_vecf_eyelid_crease.cxx  boxm2_vecf_eyelid_crease.h  boxm2_vecf_fat_pocket.cxx  boxm2_vecf_fat_pocket.h  boxm2_vecf_fat_pocket_params.cxx  boxm2_vecf_fat_pocket_params.h  boxm2_vecf_fit_face.cxx  boxm2_vecf_fit_face.h  boxm2_vecf_fit_fat_pocket.cxx  boxm2_vecf_fit_fat_pocket.h  boxm2_vecf_geometry_base.h  boxm2_vecf_head_model.h  boxm2_vecf_lid_base.h  boxm2_vecf_mandible.cxx  boxm2_vecf_mandible.h  boxm2_vecf_mandible_scene.cxx  boxm2_vecf_mandible_scene.h  boxm2_vecf_middle_fat_pocket.cxx  boxm2_vecf_middle_fat_pocket.h  boxm2_vecf_middle_fat_pocket_articulation.cxx  boxm2_vecf_middle_fat_pocket_articulation.h  boxm2_vecf_middle_fat_pocket_params.cxx  boxm2_vecf_middle_fat_pocket_params.h  (+20 more)
contrib/brl/bseg/boxm2/vecf/Templates/: boxm2_surface_distance_refine+boxm2_vecf_middle_fat_pocket-.cxx  boxm2_surface_distance_refine+boxm2_vecf_skin-.cxx  vbl_smart_ptr+boxm2_vecf_articulated_scene-.cxx
contrib/brl/bseg/boxm2/vecf/exe/: CMakeLists.txt  face_fitter.cxx  scene_creator.cxx
contrib/brl/bseg/boxm2/vecf/ocl/: boxm2_vecf_ocl_orbit_scene.cxx  boxm2_vecf_ocl_orbit_scene.h
contrib/brl/bseg/boxm2/vecf/tests/: CMakeLists.txt  test_composite_face.cxx  test_cranium.cxx  test_driver.cxx  test_eye.cxx  test_fat_pocket.cxx  test_fat_pocket_scene.cxx  test_fit_face.cxx  test_fit_fat_pocket.cxx  test_mandible.cxx  test_middle_fat_pocket.cxx  test_mouth.cxx  test_orbicularis_oris.cxx  test_orbit.cxx  test_pc_viewer.cxx  test_skin.cxx
contrib/brl/bseg/boxm2/vecf/view/: boxm2_ocl_articulated_render_tableau.cxx
contrib/brl/bseg/boxm2/vecf/view/tests/: articulated_render.cxx
contrib/rpl/: CMakeLists.txt
core/vbl/: vbl_array_3d.h
core/vgl/: vgl_closest_point.h  vgl_closest_point.hxx  vgl_closest_point.txx  vgl_cubic_spline_3d.h  vgl_plane_3d.hxx  vgl_plane_3d.txx  vgl_pointset_3d.h
core/vgl/algo/: vgl_fit_plane_3d.hxx  vgl_fit_plane_3d.txx  vgl_h_matrix_3d.h
core/vgl/tests/: test_closest_point.cxx
core/vnl/tests/: test_math.cxx
